# StreamFlow

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  INFRASTRUCTURE_SETUP_GUIDE.md  MANIFEST.in  Makefile  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README.md  STREAMFLOW_USAGE_GUIDE.md  __init__.py  build_docker_images.sh  cli.py  debug_config.py  docker-compose-temp.yml  docker-compose.yml  example_user_setup.py  integration_example.py  publish_to_pypi.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.sh  streamflow_usage_examples.md
.github/workflows/: ci-cd.yml
docker/alerting/: Dockerfile
docker/analytics/: Dockerfile
docker/dashboard/: Dockerfile
docker/ingestion/: Dockerfile
docker/nginx/: nginx.conf
docker/prometheus/: alert_rules.yml  prometheus.yml
docker/storage/: Dockerfile
docker/webhook/: Dockerfile  entrypoint.sh
docs/: API.md
examples/: kubectl-completion-demo.md  usage_examples.py
helm/streamflow/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployments.yaml  ingress.yaml  namespace.yaml  services.yaml
k8s/webhook/: deployment.yaml  namespace.yaml  rbac.yaml  service.yaml
scripts/: deploy-webhook.sh  generate-webhook-certs.sh  prepare-package.sh  quickstart.sh  setup-k8s-completion.sh  test-webhook.sh
services/: __init__.py
services/alerting/: main.py
services/analytics/: main.py
services/dashboard/: __init__.py  main.py
services/ingestion/: main_refactored.py
services/storage/: __init__.py  main.py
services/webhook/: __init__.py  main.py
shared/: __init__.py  config.py  models.py
shared/models/: __init__.py  alerts.py  auth.py  events.py  metrics.py
shared/utils/: __init__.py  auth.py  config.py  logging.py  metrics.py  validation.py
streamflow/: __init__.py  cli.py
streamflow/services/alerting/: __init__.py  main.py
streamflow/services/analytics/: __init__.py  main.py
streamflow/services/dashboard/: main.py
streamflow/services/ingestion/: __init__.py  main.py
streamflow/services/storage/: main.py
streamflow/services/webhook/: main.py
streamflow/shared/: __init__.py  database.py  messaging.py
terraform/: iam.tf  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_comprehensive.py  test_ingestion.py
tests/unit/: test_models.py
ui/static/css/: styles.css
ui/static/js/: app.js
ui/templates/: base.html  dashboard.html  login.html
web-ui/: package.json  tailwind.config.js
web-ui/public/: index.html
web-ui/src/: App.js
web-ui/src/components/: Sidebar.js
web-ui/src/pages/: Alerts.js  Analytics.js  Dashboard.js  Events.js  Settings.js
webhook-certs/: csr.conf  mutating-webhook-config.yaml  tls.crt  tls.csr  tls.key  webhook-certs-secret.yaml
